//----------------------------------------------------------------------------
// Copyright 2023, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

syntax = "proto3";


option optimize_for = LITE_RUNTIME;

message modelData_proto
{
	optional int32 vbo_vert  = 1;
	optional int32 vbo_norm  = 2;
	optional int32 vbo_uv  = 3;
	optional int32 vbo_trilist  = 4;
	optional int32 text_color = 5;
	optional int32 text_normal = 6;
	optional int32 text_rough = 7;

}

// -- End of File ---
